src/grammar/MyGrammarParser.java
// Generated from MyGrammar.g4 by ANTLR 4.9.2
package grammar;

import helpers.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, RULE_NAME=16, 
		TOKEN_NAME=17, PATTERN=18, CODE=19, WS=20;
	public static final int
		RULE_grammarStructure = 0, RULE_grammarName = 1, RULE_lexerRules = 2, 
		RULE_token = 3, RULE_parserRules = 4, RULE_args = 5, RULE_arg = 6, RULE_type = 7, 
		RULE_returnVal = 8, RULE_myRule = 9, RULE_parts = 10, RULE_part = 11, 
		RULE_inputArgs = 12, RULE_inputArg = 13, RULE_inputArgName = 14, RULE_code = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammarStructure", "grammarName", "lexerRules", "token", "parserRules", 
			"args", "arg", "type", "returnVal", "myRule", "parts", "part", "inputArgs", 
			"inputArg", "inputArgName", "code"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "';'", "'lexer {'", "'}'", "':'", "'-> ignore'", "'parser {'", 
			"'('", "')'", "'['", "']'", "'|'", "','", "'='", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "RULE_NAME", "TOKEN_NAME", "PATTERN", "CODE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GrammarStructureContext extends ParserRuleContext {
		public GrammarInfo info;
		public GrammarNameContext grammarName;
		public LexerRulesContext lexerRules;
		public ParserRulesContext parserRules;
		public GrammarNameContext grammarName() {
			return getRuleContext(GrammarNameContext.class,0);
		}
		public LexerRulesContext lexerRules() {
			return getRuleContext(LexerRulesContext.class,0);
		}
		public ParserRulesContext parserRules() {
			return getRuleContext(ParserRulesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MyGrammarParser.EOF, 0); }
		public GrammarStructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarStructure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterGrammarStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitGrammarStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitGrammarStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarStructureContext grammarStructure() throws RecognitionException {
		GrammarStructureContext _localctx = new GrammarStructureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarStructure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(T__0);
			setState(33);
			((GrammarStructureContext)_localctx).grammarName = grammarName();
			setState(34);
			match(T__1);
			setState(35);
			((GrammarStructureContext)_localctx).lexerRules = lexerRules();
			setState(36);
			((GrammarStructureContext)_localctx).parserRules = parserRules();
			setState(37);
			match(EOF);
			 ((GrammarStructureContext)_localctx).info =  new GrammarInfo((((GrammarStructureContext)_localctx).grammarName!=null?_input.getText(((GrammarStructureContext)_localctx).grammarName.start,((GrammarStructureContext)_localctx).grammarName.stop):null), ((GrammarStructureContext)_localctx).lexerRules.list, ((GrammarStructureContext)_localctx).parserRules.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarNameContext extends ParserRuleContext {
		public TerminalNode TOKEN_NAME() { return getToken(MyGrammarParser.TOKEN_NAME, 0); }
		public TerminalNode RULE_NAME() { return getToken(MyGrammarParser.RULE_NAME, 0); }
		public GrammarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterGrammarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitGrammarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitGrammarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarNameContext grammarName() throws RecognitionException {
		GrammarNameContext _localctx = new GrammarNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !(_la==RULE_NAME || _la==TOKEN_NAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexerRulesContext extends ParserRuleContext {
		public List<GrammarToken> list;
		public TokenContext token;
		public List<TokenContext> token() {
			return getRuleContexts(TokenContext.class);
		}
		public TokenContext token(int i) {
			return getRuleContext(TokenContext.class,i);
		}
		public LexerRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexerRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterLexerRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitLexerRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitLexerRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexerRulesContext lexerRules() throws RecognitionException {
		LexerRulesContext _localctx = new LexerRulesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lexerRules);

			List<GrammarToken> list = new ArrayList<>();
			((LexerRulesContext)_localctx).list =  list;

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__2);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_NAME) {
				{
				{
				setState(43);
				((LexerRulesContext)_localctx).token = token();
				 _localctx.list.add(((LexerRulesContext)_localctx).token.info); 
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenContext extends ParserRuleContext {
		public GrammarToken info;
		public boolean ignore = false;;
		public Token n;
		public Token p;
		public TerminalNode TOKEN_NAME() { return getToken(MyGrammarParser.TOKEN_NAME, 0); }
		public TerminalNode PATTERN() { return getToken(MyGrammarParser.PATTERN, 0); }
		public TokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterToken(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitToken(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitToken(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokenContext token() throws RecognitionException {
		TokenContext _localctx = new TokenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_token);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			((TokenContext)_localctx).n = match(TOKEN_NAME);
			setState(54);
			match(T__4);
			setState(55);
			((TokenContext)_localctx).p = match(PATTERN);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(56);
				match(T__5);
				((TokenContext)_localctx).ignore =  true;
				}
			}

			setState(60);
			match(T__1);
			((TokenContext)_localctx).info =  new GrammarToken((((TokenContext)_localctx).n!=null?((TokenContext)_localctx).n.getText():null), (((TokenContext)_localctx).p!=null?((TokenContext)_localctx).p.getText():null).replaceAll("\"", ""), _localctx.ignore);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParserRulesContext extends ParserRuleContext {
		public List<ParserRuleInfo> list;
		public List<ParserRuleInfo.AlternativeRule> alts = new ArrayList<>();
		public String tmpArg = "";
		public String tmpReturn = "";
		public Token RULE_NAME;
		public ArgsContext args;
		public ReturnValContext returnVal;
		public MyRuleContext f;
		public MyRuleContext s;
		public List<TerminalNode> RULE_NAME() { return getTokens(MyGrammarParser.RULE_NAME); }
		public TerminalNode RULE_NAME(int i) {
			return getToken(MyGrammarParser.RULE_NAME, i);
		}
		public List<MyRuleContext> myRule() {
			return getRuleContexts(MyRuleContext.class);
		}
		public MyRuleContext myRule(int i) {
			return getRuleContext(MyRuleContext.class,i);
		}
		public List<ArgsContext> args() {
			return getRuleContexts(ArgsContext.class);
		}
		public ArgsContext args(int i) {
			return getRuleContext(ArgsContext.class,i);
		}
		public List<ReturnValContext> returnVal() {
			return getRuleContexts(ReturnValContext.class);
		}
		public ReturnValContext returnVal(int i) {
			return getRuleContext(ReturnValContext.class,i);
		}
		public ParserRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parserRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterParserRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitParserRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitParserRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParserRulesContext parserRules() throws RecognitionException {
		ParserRulesContext _localctx = new ParserRulesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parserRules);

				List<ParserRuleInfo> list = new ArrayList<>();
				((ParserRulesContext)_localctx).list =  list;
			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__6);
			setState(94); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				((ParserRulesContext)_localctx).RULE_NAME = match(RULE_NAME);
				setState(65);
				match(T__7);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RULE_NAME || _la==TOKEN_NAME) {
					{
					setState(66);
					((ParserRulesContext)_localctx).args = args();
					((ParserRulesContext)_localctx).tmpArg =  (((ParserRulesContext)_localctx).args!=null?_input.getText(((ParserRulesContext)_localctx).args.start,((ParserRulesContext)_localctx).args.stop):null);
					}
				}

				setState(71);
				match(T__8);
				setState(72);
				match(T__9);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RULE_NAME || _la==TOKEN_NAME) {
					{
					setState(73);
					((ParserRulesContext)_localctx).returnVal = returnVal();
					((ParserRulesContext)_localctx).tmpReturn =  (((ParserRulesContext)_localctx).returnVal!=null?_input.getText(((ParserRulesContext)_localctx).returnVal.start,((ParserRulesContext)_localctx).returnVal.stop):null);
					}
				}

				setState(78);
				match(T__10);
				setState(79);
				match(T__4);
				setState(80);
				((ParserRulesContext)_localctx).f = myRule();
				_localctx.alts.add(((ParserRulesContext)_localctx).f.alt);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(82);
					match(T__11);
					setState(83);
					((ParserRulesContext)_localctx).s = myRule();
					_localctx.alts.add(((ParserRulesContext)_localctx).s.alt);
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91);
				match(T__1);
				list.add(new ParserRuleInfo((((ParserRulesContext)_localctx).RULE_NAME!=null?((ParserRulesContext)_localctx).RULE_NAME.getText():null), _localctx.tmpArg, _localctx.tmpReturn, _localctx.alts)); ((ParserRulesContext)_localctx).alts =  new ArrayList<>(); ((ParserRulesContext)_localctx).tmpArg =  ""; ((ParserRulesContext)_localctx).tmpReturn =  "";
				}
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RULE_NAME );
			setState(98);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			arg();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(101);
				match(T__12);
				setState(102);
				arg();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RULE_NAME() { return getToken(MyGrammarParser.RULE_NAME, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			type();
			setState(109);
			match(T__13);
			setState(110);
			match(RULE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode RULE_NAME() { return getToken(MyGrammarParser.RULE_NAME, 0); }
		public TerminalNode TOKEN_NAME() { return getToken(MyGrammarParser.TOKEN_NAME, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_la = _input.LA(1);
			if ( !(_la==RULE_NAME || _la==TOKEN_NAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnValContext extends ParserRuleContext {
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public ReturnValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterReturnVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitReturnVal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitReturnVal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnValContext returnVal() throws RecognitionException {
		ReturnValContext _localctx = new ReturnValContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnVal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			arg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MyRuleContext extends ParserRuleContext {
		public ParserRuleInfo.AlternativeRule alt;
		public PartsContext parts() {
			return getRuleContext(PartsContext.class,0);
		}
		public MyRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterMyRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitMyRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitMyRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MyRuleContext myRule() throws RecognitionException {
		MyRuleContext _localctx = new MyRuleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_myRule);

			ParserRuleInfo.AlternativeRule alt = new ParserRuleInfo.AlternativeRule();
			((MyRuleContext)_localctx).alt =  alt;

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			parts(_localctx.alt);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartsContext extends ParserRuleContext {
		public ParserRuleInfo.AlternativeRule alt;
		public PartContext part;
		public List<PartContext> part() {
			return getRuleContexts(PartContext.class);
		}
		public PartContext part(int i) {
			return getRuleContext(PartContext.class,i);
		}
		public PartsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PartsContext(ParserRuleContext parent, int invokingState, ParserRuleInfo.AlternativeRule alt) {
			super(parent, invokingState);
			this.alt = alt;
		}
		@Override public int getRuleIndex() { return RULE_parts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterParts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitParts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitParts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PartsContext parts(ParserRuleInfo.AlternativeRule alt) throws RecognitionException {
		PartsContext _localctx = new PartsContext(_ctx, getState(), alt);
		enterRule(_localctx, 20, RULE_parts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118);
				((PartsContext)_localctx).part = part();
				_localctx.alt.parts.add(((PartsContext)_localctx).part.info);
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RULE_NAME || _la==TOKEN_NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartContext extends ParserRuleContext {
		public ParserRuleInfo.RuleAndCode info;
		public String codeLines = "";
		public String tmpArgs = "";
		public Token TOKEN_NAME;
		public CodeContext code;
		public Token RULE_NAME;
		public InputArgsContext inputArgs;
		public TerminalNode TOKEN_NAME() { return getToken(MyGrammarParser.TOKEN_NAME, 0); }
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public TerminalNode RULE_NAME() { return getToken(MyGrammarParser.RULE_NAME, 0); }
		public InputArgsContext inputArgs() {
			return getRuleContext(InputArgsContext.class,0);
		}
		public PartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyGrammarVisitor ) return ((MyGrammarVisitor<? extends T>)visitor).visitPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PartContext part() throws RecognitionException {
		PartContext _localctx = new PartContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_part);
		int _la;
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOKEN_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				((PartContext)_localctx).TOKEN_NAME = match(TOKEN_NAME);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(126);
					((PartContext)_localctx).code = code();
					 ((PartContext)_localctx).codeLines =  (((PartContext)_localctx).code!=null?_input.getText(((PartContext)_localctx).code.start,((PartContext)_localctx).code.stop):null); 
					}
				}

				 ((PartContext)_localctx).info =  new ParserRuleInfo.RuleAndCode((((PartContext)_localctx).TOKEN_NAME!=null?((PartContext)_localctx).TOKEN_NAME.getText():null), "", _localctx.codeLines, true); ((PartContext)_localctx).codeLines =  ""; ((PartContext)_localctx).tmpArgs =  "";
				}
				break;
			case RULE_NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				((PartContext)_localctx).RULE_NAME = match(RULE_NAME);
				setState(133);
				match(T__7);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RULE_NAME) {
					{
					setState(134);
					((PartContext)_localctx).inputArgs = inputArgs();
					((PartContext)_localctx).tmpArgs =  (((PartContext)_localctx).inputArgs!=null?_input.getText(((PartContext)_localctx).inputArgs.start,((PartContext)_localctx).inputArgs.stop):null);
					}
				}

				setState(139);
				match(T__8);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(140);
					((PartContext)_localctx).code = code();
					 ((PartContext)_localctx).codeLines =  (((PartContext)_localctx).code!=null?_input.getText(((PartContext)_localctx).code.start,((PartContext)_localctx).code.stop):null); 
					}
				}
